--- a/addulting/client/package.json
+++ b/addulting/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "react-bootstrap": "^0.32.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4"
   }
 }
