--- a/addulting/client/package.json
+++ b/addulting/client/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.0",
     "react-bootstrap": "^0.32.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
