--- a/addulting/package.json
+++ b/addulting/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-dropdown": "^1.5.0",
+    "react-materialize": "^2.3.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
